# bit-gift

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
src/: main.cpp
